--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-tsparticles": "^2.12.2",
-    "tailwindcss": "^4.1.16",
     "tsparticles": "^3.9.1"
   },
   "devDependencies": {
@@ -21,10 +20,13 @@
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
+    "autoprefixer": "10",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
+    "postcss": "8",
+    "tailwindcss": "3",
     "vite": "^7.1.7"
   }
 }
